# xmlpp

./: .hgsub  .hgsubstate  CMakeLists.txt  Configure.cmake  FindNecessaryLibraries.cmake
CMakeModules/: BuildFlags.cmake  Doxy.cmake  Doxyfile.cmake  Doxyfile.cmake.in  Find3rdParty.cmake  OutputPaths.cmake  PrecompiledHeaders.cmake  SetTargetProperties.cmake  StandartIncludes.cmake  Uninstall.cmake  cmake_uninstall.cmake.in
CMakeModules/FindModules/: Find3rdParty.cmake  FindACML.cmake  FindBullet.cmake  FindCommonModule.cmake  FindDevIL.cmake  FindGlew.cmake  FindLapack.cmake  FindLib3ds.cmake  FindSimpleGL.cmake  FindSlonEngine.cmake  FindXML++.cmake
data/xml/: Car.xml
examples/: CMakeLists.txt
examples/SimpleLoading/src/: CMakeLists.txt  main.cpp
examples/serialization/src/: CMakeLists.txt  main.cpp
include/: Attribute.h  Document.h  Element.h  Iterators.hpp  Node.h  Parsers.hpp  Serialization.hpp  attribute.h  document.h  element.h  iterators.hpp  node.h  parsers.hpp  tinyxml.h
include/serialization/: attribute_serializer.hpp  container_serializer.hpp  custom_serializer.hpp  element_serializer.hpp  generic_serializer.hpp  helpers.hpp  name_value_pair.hpp  serialization.hpp  text_serializer.hpp
src/: Attribute.cpp  CMakeLists.txt  Document.cpp  Element.cpp  Makefile  Node.cpp  attribute.cpp  document.cpp  element.cpp  iterator.cpp  node.cpp
test/: CMakeLists.txt
test/Serialization/: CMakeLists.txt  main.cpp
test/Traits/: CMakeLists.txt  main.cpp
xml++/: attribute.h  document.h  element.h  iterator.h  iterators.hpp  node.h
xml++/serialization/: archive.hpp  attribute_serializer.hpp  container_serializer.hpp  custom_serializer.hpp  element_serializer.hpp  generic_serializer.hpp  helpers.hpp  name_value_pair.hpp  serialization.hpp  text_serializer.hpp
