CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
PROJECT (XML++)
INCLUDE_DIRECTORIES (include/)
SET (TARGET_NAME XML++)

# paths
SET (CMAKE_DEBUG_POSTFIX "-d")
SET (INSTALL_DIR ${PROJECT_BINARY_DIR})
SET (CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${INSTALL_DIR}/lib)
SET (CMAKE_LIBRARY_OUTPUT_DIRECTORY ${INSTALL_DIR}/lib)
SET (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${INSTALL_DIR}/bin)

# for CMake 2.4
SET (LIBRARY_OUTPUT_PATH ${INSTALL_DIR}/lib)
SET (EXECUTABLE_OUTPUT_PATH ${INSTALL_DIR}/bin)

# sources
ADD_SUBDIRECTORY (src)



