CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
PROJECT (XML++)
SET (TARGET_NAME XML++)

# paths
INCLUDE(Configure.cmake)

# sources
ADD_SUBDIRECTORY (src)

# examples
IF (BUILD_EXAMPLES)
	ADD_SUBDIRECTORY (examples)
ENDIF (BUILD_EXAMPLES)

# tests
IF (BUILD_TESTS)
	ADD_SUBDIRECTORY (test)
ENDIF (BUILD_TESTS)

