SET (HEADER_PATH ${PROJECT_SOURCE_DIR}/include)
SET (TARGET_HEADERS
	${HEADER_PATH}/attribute.h
	${HEADER_PATH}/document.h
	${HEADER_PATH}/element.h
	${HEADER_PATH}/iterators.hpp
	${HEADER_PATH}/node.h
	${HEADER_PATH}/parsers.hpp
	${HEADER_PATH}/tinyxml.h
)

SET (TARGET_SOURCES
	attribute.cpp
	document.cpp
	element.cpp
	node.cpp
	tinyxml.cpp
	tinyxmlerror.cpp
	tinyxmlparser.cpp
)

ADD_DEFINITIONS (
	-DTIXML_USE_STL
)

IF (MSVC)
	ADD_DEFINITIONS (-D_CRT_SECURE_NO_WARNINGS)
	ADD_DEFINITIONS (-D_CRT_SECURE_NO_DEPRECATE)
	ADD_DEFINITIONS (-D_SCL_SECURE_NO_WARNINGS)
ENDIF(MSVC)

ADD_LIBRARY( ${TARGET_NAME} STATIC ${TARGET_HEADERS} ${TARGET_SOURCES} ${TARGET_OPTIONS} )

# install
INSTALL(
	TARGETS ${TARGET_NAME}
	RUNTIME DESTINATION ${INSTALL_BINDIR}
	LIBRARY DESTINATION ${INSTALL_LIBDIR}
	ARCHIVE DESTINATION ${INSTALL_ARCHIVEDIR}
)

INSTALL(
    FILES        ${TARGET_HEADERS}
    DESTINATION  ${INSTALL_INCDIR}/xml++
)
