INCLUDE_DIRECTORIES ( 
    ${TARGET_HEADER_PATH}
)

# list headers
SET (SERIALIZATION_TARGET_NAME "Serialization")

# headers
SET ( SERIALIZATION_TARGET_HEADERS
    ${TARGET_LEARNING_HEADERS}
)

# sources
SET ( SERIALIZATION_TARGET_SOURCES
	main.cpp
)

ADD_EXECUTABLE( ${SERIALIZATION_TARGET_NAME} ${SERIALIZATION_TARGET_HEADERS} ${SERIALIZATION_TARGET_SOURCES} )

TARGET_LINK_LIBRARIES( ${SERIALIZATION_TARGET_NAME}
	${Boost_LIBRARIES}
	${TARGET_NAME}
)
