INCLUDE_DIRECTORIES ( 
    ${TARGET_HEADER_PATH}
)

# list headers
SET (TEST_TARGET_NAME Traits)

# headers
SET ( TEST_TARGET_HEADERS
)

# sources
SET ( TEST_TARGET_SOURCES
	main.cpp
)

ADD_EXECUTABLE( ${TEST_TARGET_NAME} ${TEST_TARGET_HEADERS} ${TEST_TARGET_SOURCES} )

TARGET_LINK_LIBRARIES( ${TEST_TARGET_NAME}
	${Boost_LIBRARIES}
	${TARGET_NAME}
)
