SET (TARGET_NAME SimpleLoading)

# sources
AUX_SOURCE_DIRECTORY(. TARGET_SOURCES)

ADD_DEFINITIONS (
	-Wall
)

# install
SET (INSTALL_BINDIR  ${EXAMPLE_DIR}/bin)

ADD_EXECUTABLE( ${TARGET_NAME} ${TARGET_SOURCES} )

TARGET_LINK_LIBRARIES( ${TARGET_NAME} XML++ )

INSTALL(
	TARGETS ${TARGET_NAME}
	RUNTIME DESTINATION ${INSTALL_BINDIR}
)

