SET (TARGET_NAME serialization)

# sources
AUX_SOURCE_DIRECTORY(. TARGET_SOURCES)

# install
SET (INSTALL_BINDIR  ${EXAMPLE_DIR}/bin)

ADD_EXECUTABLE( ${TARGET_NAME} ${TARGET_SOURCES} )

TARGET_LINK_LIBRARIES( ${TARGET_NAME} XML++ )

INSTALL(
	TARGETS ${TARGET_NAME}
	RUNTIME DESTINATION ${INSTALL_BINDIR}
)

